--- a/package.json
+++ b/package.json
@@ -10,12 +10,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/styled-components-react-native": "^5.1.3",
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.24.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "styled-components": "5.2.0"
+  },
+  "eslintConfig": {
+    "extends": "@react-native-community",
+    "plugins": [
+      "react",
+      "react-native",
+      "react-hooks"
+    ],
+    "rules": {
+      "camelcase": 1
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
